--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis saepe
+      est dicta eos aut quasi possimus dignissimos neque excepturi alias
+      nesciunt sequi in, tempore ratione eligendi veniam ad assumenda. Quidem
+      adipisci rem ipsam error voluptatem dolor eligendi quia. Odit, soluta.
+    </p>
+  </body>
 </html>
