--- a/index.html
+++ b/index.html
@@ -14,15 +14,5 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis saepe
-      est dicta eos aut quasi possimus dignissimos neque excepturi alias
-      nesciunt sequi in, tempore ratione eligendi veniam ad assumenda. Quidem
-      adipisci rem ipsam error voluptatem dolor eligendi quia. Odit, soluta.
-    </p>
-  </body>
+  <body></body>
 </html>
