add button component

--- a/index.html
+++ b/index.html
@@ -14,10 +14,5 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <span class="icon-container">
-      </svg><svg class="icon icon--primary">
-        <use xlink:href="images/sprite.svg#quotes"></use>
-    </span>
-  </body>
+  <body></body>
 </html>
