Add input component

--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <input
+      type="text"
+      name=""
+      id=""
+      class="input"
+      placeholder="Enter domain name here"
+    />
+  </body>
 </html>
