Add input group component

--- a/index.html
+++ b/index.html
@@ -14,13 +14,5 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <input
-      type="text"
-      name=""
-      id=""
-      class="input"
-      placeholder="Enter domain name here"
-    />
-  </body>
+  <body></body>
 </html>
