--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <div class="card card--secondary" style="width: 30%">
+        <header class="card__header">Card Title</header>
+        <div class="card__body">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, rerum!
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
