--- a/index.html
+++ b/index.html
@@ -15,13 +15,6 @@
     />
   </head>
   <body>
-    <div>
-      <div class="card card--secondary" style="width: 30%">
-        <header class="card__header">Card Title</header>
-        <div class="card__body">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, rerum!
-        </div>
-      </div>
-    </div>
+    <div style="width: 50%; padding: 4rem"></div>
   </body>
 </html>
