Add block component

--- a/index.html
+++ b/index.html
@@ -14,5 +14,39 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur
+          perferendis, eveniet praesentium quaerat, odio quo enim provident
+          quasi mollitia porro quam nisi fugit, voluptas repudiandae tempora ex
+          aliquam dolor laboriosam?
+        </p>
+      </header>
+      <div>
+        <div class="card card--secondary" style="width: 30%">
+          <header class="card__header">Card Title</header>
+          <div class="card__body">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint,
+            rerum!
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="block block--dark block--skewed-left">
+      <div class="container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur
+          perferendis, eveniet praesentium quaerat, odio quo enim provident quasi
+          mollitia porro quam nisi fugit, voluptas repudiandae tempora ex aliquam
+          dolor laboriosam?
+        </p>
+            </section>
+      </div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
