--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Website</title>
+    <!-- give search engine info -->
+    <meta
+      name="description"
+      content="Deploy your website in less than 60 seconds."
+    />
+
+    <!-- Open graph protocol: ogp.me -->
+    <!--  help show what other see when page is shared with others -->
+    <meta property="og:title" content="HTML/CSS learning prototype" />
+    <meta property="og:description" content="description ..." />
+    <meta property="og:type" content="type ..." />
+    <meta property="og:image" content="http://" />
+    <meta property="og:url" content="https://..." />
+
+    <title>My Website - HTML/CSS Learning</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
