--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
         <picture data-aos="fade-right">
           <source
             type="image/webp"
-            srcset="images/wordpress.webp 1x, images/wordpress.@2x.webp 2x"
+            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
           />
           <source
             type="image/jpg"
-            srcset="images/wordpress.jpg 1x, images/wordpress.@2x.jpg 2x"
+            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
           />
           <img class="feature__image" src="images/wordpress.jpg" alt="" />
         </picture>
@@ -296,7 +296,7 @@
           />
           <source
             type="image/jpg"
-            srcset="images/ipad.jpg 1x, images/ipad@2x.jpg 2x"
+            srcset="images/ipad.png 1x, images/ipad@2x.png 2x"
           />
           <img src="images/ipad.png" alt="" />
         </picture>
